# AfterBurnerII

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_web.sh
cmake/dae/: Emscripten.cmake  MicrosoftWindows.cmake
engine/: BaseGame.cpp  BaseGame.h  SoundEffect.h  SoundStream.h  Texture.cpp  Texture.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  structs.cpp  structs.h  utils.cpp  utils.h
src/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  AutoMove.cpp  AutoMove.h  Behaviour.cpp  Behaviour.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Coin.cpp  Coin.h  Collider.cpp  Collider.h  Component.cpp  Component.h  DebugManager.cpp  DebugManager.h  Font.cpp  Font.h  GUIManager.cpp  GUIManager.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GameTime.cpp  GameTime.h  Gizmos.cpp  Gizmos.h  GlobalSettings.cpp  GlobalSettings.h  (+42 more)
